hapi_api: Add sample test

--- a/06/hapi_api/.eslintrc.json
+++ b/06/hapi_api/.eslintrc.json
@@ -9,5 +9,8 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "import/no-extraneous-dependencies": "off",
+    "no-undef": "off"
+  }
 }
