--- a/06/hapi_api/package.json
+++ b/06/hapi_api/package.json
@@ -7,13 +7,14 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --ui tdd",
+    "test": "mocha --ui tdd src/test",
     "start": "node src/main/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.3.4",
     "chai": "^4.3.7",
     "eslint": "^8.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
