--- a/06/hapi_api/.eslintrc.json
+++ b/06/hapi_api/.eslintrc.json
@@ -10,7 +10,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "import/no-extraneous-dependencies": "off",
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "no-undef": "off"
   }
 }
