Add barebones hapi server in server.js

--- a/06/hapi_api/package.json
+++ b/06/hapi_api/package.json
@@ -23,5 +23,8 @@
     "mocha": "^10.2.0",
     "prettier": "^2.8.8"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@hapi/hapi": "^21.3.2"
+  }
 }
