--- a/06/hapi_api/package.json
+++ b/06/hapi_api/package.json
@@ -25,6 +25,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@hapi/hapi": "^21.3.2"
+    "@hapi/hapi": "^21.3.2",
+    "mongoose": "^7.0.5"
   }
 }
