--- a/06/hapi_api/package.json
+++ b/06/hapi_api/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.3.4",
+    "axios": "^1.4.0",
     "chai": "^4.3.7",
     "eslint": "^8.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
