--- a/06/hapi_api/package.json
+++ b/06/hapi_api/package.json
@@ -22,6 +22,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "mocha": "^10.2.0",
+    "mongodb": "^5.3.0",
     "prettier": "^2.8.8"
   },
   "type": "module",
