hapi_api: Replace global setup with suiteSetup
and global teardown with suiteTeardown

--- a/06/hapi_api/package.json
+++ b/06/hapi_api/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --ui tdd --require src/test/fixtures.js src/test",
+    "test": "mocha --ui tdd src/test",
     "start": "node src/main/app.js"
   },
   "keywords": [],
