--- a/07/hapi_api/package.json
+++ b/07/hapi_api/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.3.4",
+    "@types/chai-as-promised": "^7.1.5",
     "axios": "^1.4.0",
     "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^8.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
