--- a/07/hapi_api/package.json
+++ b/07/hapi_api/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --ui tdd src/test",
+    "test": "mocha",
     "start": "node src/main/app.js"
   },
   "keywords": [],
